# ToolboxLab

./: .gitignore  Distillation.py  LICENSE  README.md  chemical_rxn.py  pH.py  pyproject.toml  setup.py  st_main.py
.ipynb_checkpoints/: Distillation-checkpoint.py  chemical_rxn-checkpoint.py
Toolbox.egg-info/: PKG-INFO
Toolpackage/: Streamlit interface.py
notebooks/: Arnau.ipynb  project_report.ipynb
pages/: Chemical_Reaction.py  st_Chemical_rxn.py  st_Distillation.py
scripts/: run.py
scripts/Interface/: Home_Page.py  run.py
scripts/Interface/pages/: Boiling_Point_at_new_Pressure.py  Chemical_Reaction.py  Distillation.py  Liquid-Liquid_Extraction.py  MSDStry.py  Molecule_Properties_and_MSDS.py  Solvent_Determination.py  Useful_Functions.py  Usefull_Functions.py  pH_Calculations.py  pH_Calculator.py
scripts/pages/: Chemical_Reaction.py
src/Toolbox/: Distillation.py  Fiche securité.ipynb  Fiche_de_sécurité.ipynb  LLE.py  MSDS.py  MSDS2.py  MSDS3.py  MSDS_2.py  Name to CAS.py  Por_si_las_moscas_m.py  Pressure_TB.py  Solvent.ipynb  Solvent.py  Solvent2.ipynb  Solvent_2.py  Solvents.py  Try T.ipynb  Untitled.ipynb  chemical_rxn.py  original m.py  pH.py
tests/: test_LLE.py  test_MSDS.py  test_MSDS_2.py  test_Pressure_TB.py  test_Solvent.py  test_Solvents.py  test_distillation.py  test_module.py  test_pH.py  test_rxn.py
